fixed UserControl reference

--- a/HelloWorldDesktopWinUI3CS/HelloWorldDesktopWinUI3CS/MainWindow.xaml
+++ b/HelloWorldDesktopWinUI3CS/HelloWorldDesktopWinUI3CS/MainWindow.xaml
@@ -17,8 +17,7 @@
                 <TextBlock   x:Name="cdTextBlock" TextWrapping="Wrap" />
             </ScrollViewer>
         </ContentDialog>
-        <!--<custom:UserControl/>-->
-
+        <custom:UserControl/>
 
     </StackPanel>
 </Window>
